2003-03-03  Ross Burton  <ross@burtonini.com>

	* src/dh-main.c: Fix the prototype on dh_client_data_cb, and
	remove the GTK+ 2.2.0 check as that is assumed.

2003-03-03  Mikael Hallendal  <micke@codefactory.se>

	* devhelp.desktop.in (Exec): changed name to devhelp

2003-03-03  Ross Burton  <ross@burtonini.com>

	* src/dh-main.c: Add a "raise" event to the remote protocol, so
	that the existing instance can be shown.

	* devhelp.desktop.in: We support startup notification!

2003-03-02  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ko" to ALL_LINGUAS.

2003-03-02  Mikael Hallendal  <micke@codefactory.se>

	* Relase 0.5

	* NEWS: updated for 0.5

	* configure.in: depend on GNOME 2.2

	* src/Makefile.am: Installed as binary devhelp.
	
	* devhelp.spec.in: fixes.

	* configure.in: fixed deps.

2003-03-02  Ross Burton  <ross@burtonini.com>

	* configure.in, acconfig.h: Added a zlib check.

	* src/dh-base.c: Also check for .devhelp.gz files, if we have zlib.

	* src/dh-parser.h: Added dh_parse_gz_file(), for parsing gzipped
	.devhelp files.

	* src/dh-parser.c: Implement dh_parse_gz_file().

2003-03-02  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (INCLUDES): fix dist-check

	* libegg/toolbar/Makefile.am (INCLUDES): fix dist-check

	* configure.in: export EGG_CFLAGS, EGG_LIBS

2003-03-01  Richard Hult  <rhult@codefactory.se>

	* src/dh-main.c (dh_get_socket_filename, dh_create_socket) 
	(dh_try_to_connect): Fix path.

2003-02-25  Yuriy Syrota  <rasta renome.rovno.ua>

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2003-02-24  Mikael Hallendal  <micke@codefactory.se>

	* libegg/toolbar/Makefile.am: dist-check fixes.

	* dtd/Makefile.am (dtddir): removed all the unused dtd-files from
	  dtd_DATA 

	* configure.in: bumped version to 0.5, soon gonna release, I
	  promise

	* Makefile.am (EXTRA_DIST): don't include idl/* in EXTRA_DIST.

2003-02-19  James Henstridge  <james@daa.com.au>
