@@ -1,8 +1,0 @@
-#undef ENABLE_NLS
-#undef GETTEXT_PACKAGE
-#undef HAVE_CATGETS
-#undef HAVE_GETTEXT
-#undef HAVE_LC_MESSAGES
-#undef HAVE_STPCPY
-#undef PREFIX
-#undef HAVE_LIBZ
